sites/indigo/clusters/dal-indigo-core-1/wave-2/overlays/anubis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anubis-service
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
    - port: 9090
      targetPort: metrics
      protocol: TCP
      name: metrics
  selector:
    app.kubernetes.io/name: anubis
