sites/indigo/clusters/dal-indigo-core-1/wave-2/overlays/anubis/network-policy-anubis.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: anubis
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: anubis
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik-public
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "8080" # This is the port of the pod, not the service
              protocol: TCP
  egress: []
